corrected the display property of about-us__buttons, which were visible at 768px width

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,7 @@ body {
    overflow: hidden;
     display: flex;
     flex-direction: column;
+    flex: 1;
     height: 550px;
 }
 
@@ -203,6 +204,11 @@ body {
     justify-content: space-between;
     column-gap: 32px;
 }
+@media screen and (width < 1120px)  {
+    .about-us__buttons {
+        display: none;
+    }
+}
 
 .request {
     display: flex;
@@ -346,12 +352,18 @@ button {
     background-color: #F8F8F8;
 }
 
-/*button:hover.slide__btn, .active {*/
+/*button:active.slide__btn {*/
+/*    border-radius: 6px;*/
+/*    border: 2px solid #B8FFEC;*/
+/*    background: #FFF;*/
+/*}*/
+
 .active {
     border-radius: 6px;
     border: 2px solid #B8FFEC;
     background: #FFF;
 }
+
 
 .services {
     display: flex;
